log/build_2024-09-24_23-59-08/py_srvcli/stderr.log
  File "/home/mayo_poyo/ros2_ws2/install/py_srvcli/lib/python3.12/site-packages/py_srvcli/client_member_function.py", line 15
    	def send_request (self, a, b)
    	                             ^
SyntaxError: expected ':'

